// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAttachmentOptions Attachment data type download 1`] = `
<Memo()
  displayOption="attachment"
  domainIndex={1}
  index={1}
  label="Attachment"
  lockType="NotLocked"
  onChange={[MockFunction]}
>
  <div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <div
        className="row"
      >
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}
        >
          <div
            className="col-xs-12"
          >
            <SectionHeading
              helpTipBody={
                <React.Fragment>
                  <p>
                    Set the default behavior of attachment links when clicked in grids and elsewhere in LabKey.
                  </p>
                </React.Fragment>
              }
              title="Attachment Behavior"
            >
              <div
                className="domain-field-section-heading"
              >
                Attachment Behavior
                <LabelHelpTip
                  title="Attachment Behavior"
                >
                  <OverlayTrigger
                    id="tooltip"
                    overlay={
                      <Popover
                        id="tooltip"
                        title="Attachment Behavior"
                      >
                        <React.Fragment>
                          <p>
                            Set the default behavior of attachment links when clicked in grids and elsewhere in LabKey.
                          </p>
                        </React.Fragment>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </div>
            </SectionHeading>
          </div>
        </Col>
      </div>
    </Row>
    <Row
      bsClass="row"
      className="domain-field-label"
      componentClass="div"
    >
      <div
        className="domain-field-label row"
      >
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}
        >
          <div
            className="col-xs-2"
          >
            <FormControl
              bsClass="form-control"
              componentClass="select"
              disabled={false}
              id="domainpropertiesrow-format-1-1"
              name="domainpropertiesrow-format"
              onChange={[Function]}
              value="attachment"
            >
              <select
                className="form-control"
                disabled={false}
                id="domainpropertiesrow-format-1-1"
                name="domainpropertiesrow-format"
                onChange={[Function]}
                value="attachment"
              >
                <option
                  key="domainpropertiesrow-formatoption-inline-1-1"
                  value="inline"
                >
                  Show Attachment in Browser
                </option>
                <option
                  key="domainpropertiesrow-formatoption-attachment-1-1"
                  value="attachment"
                >
                  Download Attachment
                </option>
              </select>
            </FormControl>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</Memo()>
`;

exports[`FileAttachmentOptions File data type inline 1`] = `
<Memo()
  displayOption="attachment"
  domainIndex={1}
  index={1}
  label="File"
  lockType="NotLocked"
  onChange={[MockFunction]}
>
  <div>
    <Row
      bsClass="row"
      componentClass="div"
    >
      <div
        className="row"
      >
        <Col
          bsClass="col"
          componentClass="div"
          xs={12}
        >
          <div
            className="col-xs-12"
          >
            <SectionHeading
              helpTipBody={
                <React.Fragment>
                  <p>
                    Set the default behavior of file links when clicked in grids and elsewhere in LabKey.
                  </p>
                </React.Fragment>
              }
              title="File Behavior"
            >
              <div
                className="domain-field-section-heading"
              >
                File Behavior
                <LabelHelpTip
                  title="File Behavior"
                >
                  <OverlayTrigger
                    id="tooltip"
                    overlay={
                      <Popover
                        id="tooltip"
                        title="File Behavior"
                      >
                        <React.Fragment>
                          <p>
                            Set the default behavior of file links when clicked in grids and elsewhere in LabKey.
                          </p>
                        </React.Fragment>
                      </Popover>
                    }
                  >
                    <div
                      className="overlay-trigger"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                    >
                      <span
                        className="label-help-target"
                      >
                        <span
                          className="label-help-icon fa fa-question-circle"
                        />
                      </span>
                    </div>
                  </OverlayTrigger>
                </LabelHelpTip>
              </div>
            </SectionHeading>
          </div>
        </Col>
      </div>
    </Row>
    <Row
      bsClass="row"
      className="domain-field-label"
      componentClass="div"
    >
      <div
        className="domain-field-label row"
      >
        <Col
          bsClass="col"
          componentClass="div"
          xs={2}
        >
          <div
            className="col-xs-2"
          >
            <FormControl
              bsClass="form-control"
              componentClass="select"
              disabled={false}
              id="domainpropertiesrow-format-1-1"
              name="domainpropertiesrow-format"
              onChange={[Function]}
              value="attachment"
            >
              <select
                className="form-control"
                disabled={false}
                id="domainpropertiesrow-format-1-1"
                name="domainpropertiesrow-format"
                onChange={[Function]}
                value="attachment"
              >
                <option
                  key="domainpropertiesrow-formatoption-inline-1-1"
                  value="inline"
                >
                  Show File in Browser
                </option>
                <option
                  key="domainpropertiesrow-formatoption-attachment-1-1"
                  value="attachment"
                >
                  Download File
                </option>
              </select>
            </FormControl>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</Memo()>
`;
